# cegse

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  alloc.c  command.c  compression.c  file_io.c  game_save.c  global_data.c  main.c  save_file.c  save_stream.c  serialisation.c  snapshot.c
include/: alloc.h  change_forms.h  compression.h  defines.h  file_io.h  game_save.h  global_data.h  save_file.h  save_stream.h  serialisation.h  snapshot.h  types.h
src/: alloc.c  alloc.h  binary_stream.c  binary_stream.h  compression.c  compression.h  defines.h  endian.h  endianness.h  log.c  log.h  main.c  mem_type_casts.h  mem_types.c  mem_types.h  savefile.c  savefile.h  savegame.c  savegame.h  stream.c  stream.h  unit_tests.h
src/cengine/: data_file.c  data_file.h
tests/: CMakeLists.txt  command.c  compress.c  main.c  serialisation.c  stream.c  test.h  test_binary_stream.c  test_save_rewrite_is_identical.c  tests.h
